--- a/css/main.css
+++ b/css/main.css
@@ -66,7 +66,7 @@ hr {margin: 1em 0;background:#f2f2f2;height:1px;color:#f2f2f2;border:none;clear:
 .clear {clear:both;position:relative;font-size:0px;height:0px;line-height:0px} 
 
 /* LAYOUT - HEADER */
-#header {background: #666 url("images/sprites.png") repeat-x 0 100%;margin: 0 0 25px;padding: 0 0 8px}
+#header {background: #666 url("images/sprites.png") repeat-x 0 100%;margin: 15px 0 25px;padding: 0 0 8px}
 
 	#header #site-name {font: 265% arial;letter-spacing: -.05em;margin:0 0 0 40px;padding:3px 0;color:#ccc;border:none}
 	#site-name a  {color: #ccc;text-decoration:none}
